# polar-bare

./: .gitignore  .prettierignore  CMakeLists.txt  Cargo.toml  NOTICE  README.md  binding.c  binding.rs  index.js  package.json  test.js
examples/: demo.js  simple.js
sandbox/: test.js
test/: data.csv  data.json  numeric.csv
